feat: Add devDependencies for @types/node and update event form with time and location fields. I added hours and location to the routes as well. I couldnt get the admin forms working with it though

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^4.19.2",
     "mongodb": "^6.6.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^20.12.8"
+  }
 }
